<resources>
    <string name="app_name">SIS</string>
    <string name="icon">Icon</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signed">SIGNED</string>
    <string name="already_have_an_account_login">Alredy have an account Login</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an account Sign In</string>
    <string name="menu_2">Log Out</string>

    <string name="this_activity">This Activity</string>
    <string name="search">Search</string>
    <string name="logged">You Logged as</string>
    <string name="image_item">image item</string>
    <string name="data_santri">Data Santri</string>
    <string name="data_nis">NIS</string>
    <string name="data_telp">Telephone</string>
    <string name="data_address">Address</string>
    <string name="add">Add</string>
    <string name="daftar_santri">Daftar Santri</string>
    <string name="value">value</string>

    <string name="kampus">Kampus</string>
    <string name="univ">Universitas</string>
    <string name="fakultas">Fakultas</string>
    <string name="program_studi">Program Studi</string>
    <string name="gelar">Gelar</string>

    <string name="presensi_santri">Presensi Santri</string>
    <string name="hadir">Hadir</string>
    <string name="izin">Izin</string>
    <string name="tanpa_keterangan">Tanpa Keterangan</string>
    <string name="keterangan">Keterangan</string>

    <string name="nilai_santri">Nilai Santri</string>
    <string name="materi">Materi</string>
    <string name="bacaan">Bacaan</string>
    <string name="hafalan">Hafalan</string>
    <string name="sikap">Sikap</string>

    <string name="name">Nama</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="ttl">TTL</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="detail_bio">Detail Bio</string>
</resources>