<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_nis"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/foto"
            app:layout_constraintTop_toTopOf="@+id/foto" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/foto"
            app:layout_constraintTop_toBottomOf="@+id/nis" />

        <TextView
            android:id="@+id/telp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_telp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toEndOf="@+id/foto"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/foto"
            app:layout_constraintTop_toBottomOf="@+id/telp" />

        <TextView
            android:id="@+id/ttl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttl"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toEndOf="@+id/foto"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_address"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toEndOf="@+id/foto"
            app:layout_constraintTop_toBottomOf="@+id/ttl" />

        <TextView
            android:id="@+id/kota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kota"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/foto"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provinsi"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toEndOf="@+id/foto"
            app:layout_constraintTop_toBottomOf="@+id/kota" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divup_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/province" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>