<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fade"
    tools:context=".view.activity.AddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_nis"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:autofillHints="name"
            android:hint="@string/data_nis"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/img_prev"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_prev"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/edt_nis"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Image"
            app:layout_constraintBottom_toBottomOf="@+id/img_prev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_prev"
            app:layout_constraintTop_toTopOf="@+id/img_prev" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/edt_nis"
            app:layout_constraintTop_toBottomOf="@+id/img_prev"/>

        <EditText
            android:id="@+id/edt_telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:autofillHints="name"
            android:hint="@string/data_telp"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/edt_name"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:autofillHints="name"
            android:hint="@string/data_address"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/edt_telp"
            app:layout_constraintTop_toBottomOf="@+id/edt_telp" />

        <EditText
            android:id="@+id/edt_city"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:autofillHints="name"
            android:hint="@string/kota"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_address" />

        <EditText
            android:id="@+id/edt_prov"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:autofillHints="name"
            android:hint="@string/provinsi"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edt_city"
            app:layout_constraintTop_toBottomOf="@+id/edt_address" />

        <EditText
            android:id="@+id/edt_birth"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:autofillHints="name"
            android:hint="@string/ttl"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="@+id/edt_city"
            app:layout_constraintTop_toBottomOf="@+id/edt_city" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:autofillHints="name"
            android:hint="@string/email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/edt_prov"
            app:layout_constraintTop_toBottomOf="@+id/edt_prov"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edt_sikap"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Sikap"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/edt_birth"
            app:layout_constraintTop_toBottomOf="@+id/edt_birth" />

        <EditText
            android:id="@+id/edt_materi"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Materi"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/edt_sikap"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <EditText
            android:id="@+id/edt_bacaan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Bacaan"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/edt_materi"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <EditText
            android:id="@+id/edt_hafalan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Hafalan"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/edt_bacaan"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <EditText
            android:id="@+id/edt_hadir"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Hadir"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/edt_sikap"
            app:layout_constraintTop_toBottomOf="@+id/edt_sikap" />

        <EditText
            android:id="@+id/edt_izin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Izin"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/edt_hadir"
            app:layout_constraintTop_toBottomOf="@+id/edt_sikap" />

        <EditText
            android:id="@+id/edt_alfa"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Alfa"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/edt_izin"
            app:layout_constraintTop_toBottomOf="@+id/edt_sikap" />

        <EditText
            android:id="@+id/edt_keterangan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Keterangan"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/edt_alfa"
            app:layout_constraintTop_toBottomOf="@+id/edt_sikap" />

        <EditText
            android:id="@+id/edt_univ"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Universitas"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/edt_hadir"
            app:layout_constraintTop_toBottomOf="@+id/edt_hadir" />

        <EditText
            android:id="@+id/edt_progdi"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Program Studi"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/edt_univ"
            app:layout_constraintTop_toBottomOf="@+id/edt_hadir" />

        <EditText
            android:id="@+id/edt_jurusan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Fakultas"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/edt_progdi"
            app:layout_constraintTop_toBottomOf="@+id/edt_hadir" />

        <EditText
            android:id="@+id/edt_gelar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="Gelar"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/edt_jurusan"
            app:layout_constraintTop_toBottomOf="@+id/edt_hadir" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_progdi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>